AG-49754 fix back button placement in filters
Squashed commit of the following:

commit b5600c71d78625fb84be15276cb6ad9b17a12677
Merge: bbe8f2de8 de4fccfd2
Author: Anatolii Khamrskii <a.khmarskii@adguard.com>
Date:   Tue Jan 20 23:23:29 2026 +0300

    Merge branch 'release/v5.3' into fix/AG-49754

commit bbe8f2de85300d9189507203427f5604d43393c7
Merge: 87645e0e4 6a2b5af2d
Author: Anatolii Khamrskii <a.khmarskii@adguard.com>
Date:   Thu Jan 15 12:21:45 2026 +0300

    Merge branch 'release/v5.3' into fix/AG-49754

commit 87645e0e421dbde504fa376d763fccef3229ade8
Merge: 6fa48e6e5 bccef7470
Author: Anatolii Khamrskii <a.khmarskii@adguard.com>
Date:   Thu Jan 15 11:02:16 2026 +0300

    Merge branch 'refs/heads/release/v5.3' into fix/AG-49754

commit 6fa48e6e54cea3bdefdcbe20341577fd146e54cf
Author: Anatolii Khamrskii <a.khmarskii@adguard.com>
Date:   Wed Jan 14 14:20:27 2026 +0300

    AG-49754 fix back button placement in filters

--- a/Extension/src/pages/options/styles/setting.pcss
+++ b/Extension/src/pages/options/styles/setting.pcss
@@ -177,12 +177,11 @@
     &__back {
         color: var(--stroke-icons-gray-icons-default);
         position: absolute;
-        padding-top: 14px;
         left: -18px;
+        top: 8px;
 
         @media (max-width: 640px) {
             display: flex;
-            padding-top: unset;
             position: unset;
         }
     }
